styles.css
@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@500;600&family=Rubik:wght@400;500;600&family=Roboto+Mono:wght@300;400;500;600;700&display=swap');

* {
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: Rubik, sans-serif;
  font-weight: 400;
  margin: 0;
  --white: #ffffff;
  --lightgray: #e8e8e8;
  --almostgray: #c7c7c7;
  --gray: #9e9e9e;
  --mediumgray: #666666;
  --darkgray: #4f4f4f;
  --black: #292929;
  --blue: #b5e2fa;
  --darkblue: #8ed5fa;
  --darkerblue: #3eb6f7;
  --darkestblue: #076ba2;
  --lightred: #e8c8c8;
  --red: #fcbcb8;
  --darkred: #fa9791;
  --code-font: 'Roboto Mono', 'Inconsolata', Consolas, 'Courier New', Courier,
    monospace;
  /* --code-weight: 600; */
  --code-weight: 400;
  color: var(--black);
}

h1 {
  font-weight: 600;
}
h2,
h3,
h4,
h5,
h6 {
  font-weight: 500;
}

button,
input[type='text'],
input[type='email'],
input[type='submit'],
textarea {
  font-family: Rubik, sans-serif;
}

.site-container {
  display: flex;
  gap: 1em;
  margin: 0 1em 1em 1em;
  justify-content: space-evenly;
}

.heading {
  padding-top: 4em;
  position: sticky;
  position: -webkit-sticky;
  align-self: flex-start;
  top: 0;
  max-width: 100em;
  min-width: 13em;
  flex: 0 1 20%;
}

.site-name {
  font-size: 3em;
}

.description {
  color: var(--darkgray);
}

.site-nav {
  margin-top: 3em;
}

.nav__list {
  padding: 0;
}

.nav__item {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.nav__link {
  text-decoration: none;
  color: var(--black);
  padding: 0.25em;
  display: inline-block;
}

.nav__link:hover {
  font-weight: 500;
  border-radius: 5px;
  background-color: var(--lightred);
  box-shadow: 0px 0px 8px var(--lightred);
}

.content {
  max-width: 45em;
  flex: 0 3 45%;
}

.site-article {
  margin-top: 4em;
}

/* About Me */
.about__heading {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.about__heading > .header {
  display: inline-block;
}

.header {
  position: relative;
  padding-top: 0.5em;
}

.pound {
  position: absolute;
  left: -1.25em;
  color: var(--mediumgray);
  font-weight: 400;
}

.link-list {
  display: inline;
  list-style-type: none;
  margin: 0;
  padding: 0.5em 0 0 0;
}

.link-list__item {
  display: inline-block;
}

.link-list__link {
  text-decoration: none;
  color: var(--black);
  display: inline-block;
  padding: 0.35em;
  border-radius: 5px;
}

.icon {
  width: 1.75em;
  height: 1.75em;
}

.link-list__link:hover {
  background-color: var(--blue);
  box-shadow: 0px 0px 8px var(--blue);
}

/* Work Experience */
.work-card {
  display: grid;
  grid-template-columns: 0.21fr 0.79fr;
  column-gap: 10px;
  align-items: baseline;
  margin-bottom: 2em;
}

.work-card:first-of-type {
  margin-top: 2.25em;
}

.card__heading {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  row-gap: 0.25em;
  column-gap: 1em;
}

.work-card__date {
  margin: 0;
  font-size: 14px;
}

.work-card__position {
  margin: 0;
  display: inline;
  font-size: 16px;
}

.link {
  color: var(--darkestblue);
}

.work-card__location {
  display: flex;
  align-items: center;
  gap: 5px;
  margin: 0;
  color: var(--mediumgray);
  font-family: var(--code-font);
  font-weight: 400;
  font-size: 14px;
  letter-spacing: -0.5px;
}

.work-card .description {
  font-size: 0.9em;
}

.skill {
  display: inline;
  margin: 0;
  background: var(--red);
  padding: 5px 8px;
  border-radius: 13px;
  line-height: 35px;
  font-family: var(--code-font);
  font-weight: 600;
  font-size: 13px;
  letter-spacing: -0.5px;
  white-space: nowrap;
  box-shadow: 0px 2px 8px var(--lightred);
  -webkit-box-shadow: 0px 2px 8px var(--lightred);
}

.skill:not(:last-child) {
  margin-right: 4px;
}

/* Projects */
.projects-container {
  display: grid;
  grid-template-columns: 0.5fr 0.5fr;
  gap: 1em;
  margin-top: 1.5em;
}

.project {
  padding: 1em;
  border: 2px solid var(--lightgray);
  border-radius: 12px;
  box-shadow: 0px 2px 4px var(--lightgray);
  -webkit-box-shadow: 0px 2px 4px var(--lightgray);
}

.project:first-of-type {
  grid-column-start: span 2;
}

.project:hover {
  border: 2px solid var(--blue);
  box-shadow: 0px 2px 4px var(--blue);
  -webkit-box-shadow: 0px 2px 4px var(--blue);
}

.project__name {
  margin: 0;
}

.project__link {
  text-decoration: none;
  color: var(--black);
}

.project__link:hover {
  text-decoration: underline;
  color: var(--darkestblue);
}

.card__contents > .description {
  font-size: 0.9em;
  margin-bottom: 0;
}

.card__image {
  display: block;
  margin: 1em auto 0 auto;
  border-radius: 5px;
  box-shadow: 0px 2px 8px var(--lightgray);
  -webkit-box-shadow: 0px 2px 8px var(--lightgray);
}

/* Contact Form */
.contact__content {
  border: 2px solid var(--lightgray);
  padding: 1em;
  border-radius: 12px;
  margin-bottom: 2em;
}

.contact__description {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 1em;
}

.contact__description > * {
  display: inline-block;
  margin: 0;
}

.contact__btn,
.input-submit {
  background-color: var(--blue);
  border: none;
  border-radius: 18px;
  padding: 8px 15px;
  font-size: 0.9em;
  font-weight: 500;
}

.contact__btn:hover,
.input-submit:hover {
  background-color: var(--darkerblue);
  cursor: pointer;
  color: var(--white);
}

.contact__btn {
  border-radius: 9px;
}

.contact__btn--open {
  background-color: var(--lightgray);
}

.contact__btn--open:hover {
  background-color: var(--gray);
}

.contact__form {
  display: grid;
  gap: 10px;
  grid-template-columns: 0.5fr 0.5fr;
}

.contact__form:has(input) {
  margin-top: 2em;
}

.contact__reason-container,
.input-submit {
  grid-column-start: span 2;
}

.contact__label {
  display: block;
  margin-bottom: 6px;
}

.input-submit {
  justify-self: center;
}

.input-text,
.input-reason {
  width: 100%;
  border: none;
  border: 2px solid var(--lightgray);
  border-radius: 3px;
  padding: 5px 7px;
}

.input-text:focus,
.input-reason:focus {
  outline-color: var(--darkblue);
}

@media (max-width: 1200px) {
  .projects-container {
    grid-template-columns: 1fr;
  }

  .project:first-of-type {
    grid-column-start: span 1;
  }
}

@media (max-width: 840px) {
  .site-container {
    display: grid;
    grid-template-columns: 1fr;
    margin: 0 auto;
    padding: 0 2em 0 2.5em;
    max-width: 650px;
    gap: 0;
  }

  .heading {
    position: static;
    padding-top: 2em;
    width: 100%;
  }

  .about__heading > .header {
    margin-top: 0;
  }

  .site-nav {
    margin: 0;
  }

  .nav__list {
    display: flex;
    justify-content: space-between;
    margin-top: 3em;
  }

  .nav__item {
    font-size: 1em;
    margin: 0;
  }

  .nav__link {
    text-decoration: underline;
    text-underline-offset: 7px;
  }

  .nav__item:hover > .nav__link {
    text-decoration: none;
  }

  .content {
    width: 100%;
  }

  .site-article:first-of-type {
    margin-top: 0;
  }

  .pound {
    left: -1em;
  }
}

@media (max-width: 524px) {
  .nav__item {
    font-size: 0.8em;
  }

  .card__image {
    display: none;
  }
}

